# RAG-Bloodborne

./: .gitignore  .pre-commit-config.yaml  README.md  chunker.py  config.py  fetcher.py  main.py  parser.py  prompt_examples.txt  pyproject.toml  wiki_chunks.jsonl
frontend/: streamlit_app.py
generation/: cli.py  embed_store.py  generate.py  rag.py  rag_config.py  rerank.py  retrieve.py
parsing/: boilerplate.py  chunker.py  config.py  fetcher.py  main.py  parser.py  reformat.py
