[project]
name = "bloodborne-rag"
version = "0.1.0"
description = "RAG system for querying Bloodborne wiki content"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "numpy>=1.26",
    "requests>=2.31",
    "streamlit>=1.38",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7",
    "ruff==0.15.21",
]

[tool.uv]
package = false
